fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,6 @@ body {
 }
 
 .mcui {
-  width: 100%;
   display: block;
   font-family: Minecraft;
   position: relative;
